demo-ns/ingress/ing.demo.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: demo-ing
  namespace: demo-ns
spec:
  rules:
  - host: rabbitmqdemo.cpp.aero.ibm.com
    http:
      paths:
      - backend:
          service:
            name: nginx-svc
            port:
              number: 8080
        path: /()(.*)
        pathType: ImplementationSpecific
